--- a/webUI/index.html
+++ b/webUI/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div id="stick"></div>
-    <button @click="fetch('http://rpi.local:8999/hlt')">HALT</button>
+    <button @click="fetch('/', {method: 'POST', payload: 'hlt'})">HALT</button>
     <script>
         const stick = document.getElementById('stick');
         stick.addEventListener('mousemove', listener);
@@ -77,7 +77,10 @@
             call();
         })
         function call() {
-            fetch(`http://rpi.local:8999/x${x}&y${y}&r${r}`);
+            fetch('/', {
+                method: 'POST',
+                body: `x${x}&y${y}&r${r}`
+            });
         }
     </script>
 </body>
